refactoring of refund system before test the last